Fixed text visibility

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ the only reason I haven't really done that here is because the alternate designs
 sure how to code them yet. One thing I was able to do though, make use of more of the vertical spacing, and make the buttons/text 
 easier to read. */
 
+/*commented out colours are what I used to see what a box looked like so I could more easily align/place content*/
+
 /*Navigation Bar*/
 .container {
   max-width: 100%;
@@ -25,6 +27,7 @@ easier to read. */
   align-items: center;
 }
 
+/*logo*/
 .header--navigation--logo {
 display: flex;
 justify-content: flex-start;
@@ -32,6 +35,7 @@ margin-top: 10px;
 margin-left: 20px;
 }
 
+/*Search Bar shape*/
 .search--bar {
   display: flex;
   align-items: center;
@@ -42,6 +46,7 @@ margin-left: 20px;
   padding:5px;
 }
 
+/*Hides/changes default appearance of an input box*/
 .search--bar input {
   background: transparent;
   flex-grow: 1;
@@ -53,10 +58,12 @@ margin-left: 20px;
   color:black;
 }
 
+/*changes placeholder text to black instead of default*/
 ::placeholder {
   color:black;
 }
 
+/*Hides/changes default appearance of an image button*/
 .search--bar button img {
  height: 30px;
 }
@@ -70,6 +77,7 @@ margin-left: 20px;
   cursor: pointer;
 }
 
+/*Navigation Titles*/
 .header--navigation--list ul {
   display: flex;
   justify-content: flex-end;
@@ -87,10 +95,12 @@ margin-left: 20px;
   font-family: 'Gill Sans';
 }
 
+/*hover state for navigation*/
 .header--navigation--list ul li a:hover {
   text-decoration: underline;
   color: lightgrey;
 }
+/*End of Navigation Bar*/
 
 /*Hero Section*/
 .Hero--Section {
@@ -103,6 +113,7 @@ margin-left: 20px;
   color: white;
 }
 
+/*Box for the text*/
 .Hero--text {
   display: flex;
   width:50%;
@@ -112,6 +123,7 @@ margin-left: 20px;
   justify-content: center;
 }
 
+/*Cite title*/
 .Uppercase {
 font-family: Georgia;
 text-transform: uppercase;
@@ -119,18 +131,12 @@ font-size: 7rem;
 letter-spacing: 0.3rem;
 }
 
+/*Cite title supporting text*/
 .Supporting {
   font-family:'Segoe UI';
   font-weight:lighter;
   font-size: 3rem;
 }
-
-/*.hero--button {
-  display:flex;
-  margin-top:20px;
-  width: 50%;
-  height: 300px;
-}*/
 
 /*This will be used for all white buttons*/
 .white--button {
@@ -144,13 +150,9 @@ letter-spacing: 0.3rem;
   font-size: 1.7rem;
   cursor: pointer;
 }
-
-.white--button a:hover {
-  background-color: gray;
-}
+/*End of Hero Section*/
 
 /*Ratings Section*/
-
 .Ratings--Section {
   display: flex;
   width: 100%;
@@ -168,6 +170,8 @@ letter-spacing: 0.3rem;
   font-weight: lighter;
   font-size: 4rem;
 }
+
+/*box for ratings*/
 .ratings{
   display: flex;
   width: 100%;
@@ -182,6 +186,7 @@ letter-spacing: 0.3rem;
   list-style-type: none;
 }
 
+/*Separates each rating into their own space*/
 .ratings ul {
   display: flex;
   flex-direction: row;
@@ -200,6 +205,7 @@ letter-spacing: 0.3rem;
   text-align: center;
 }
 
+/*Creates the bubbles for each of the ratings*/
 .rating--bubble {
   display:flex;
   height: 95%;
@@ -227,6 +233,7 @@ letter-spacing: 0.3rem;
   cursor: pointer;
 }
 
+/*Content under the ratings*/
 .ratings--bottom {
   display:flex;
   height:30%;
@@ -242,9 +249,9 @@ letter-spacing: 0.3rem;
   font-weight:lighter;
   font-size: 2.5rem;
 }
+/*End of Ratings Section*/
 
 /*Watch Section*/
-
 .watch--section {
   display: flex;
   width: 100%;
@@ -263,6 +270,7 @@ letter-spacing: 0.3rem;
   color: white
 }
 
+/*Posters box*/
 .Posters {
   display:flex;
   width: 100%;
@@ -273,6 +281,7 @@ letter-spacing: 0.3rem;
   padding-top: 35px;
   padding-bottom: 3px;
 }
+
 .Posters ul {
   display:flex;
   flex-direction: row;
@@ -281,6 +290,7 @@ letter-spacing: 0.3rem;
   list-style-type: none;
 }
 
+/*Makes every poster have the same apperance size and edge wise. Prior to addinf this, they were different sizes*/
 .Media--poster {
   display: flex;
   height: 100%;
@@ -289,6 +299,7 @@ letter-spacing: 0.3rem;
   outline: 2px solid white;
 }
 
+/*Content under the movie posters' box*/
 .watch--bottom {
   display: flex;
   height: 30%;
@@ -297,11 +308,12 @@ letter-spacing: 0.3rem;
   padding-left: 30px;
   padding-top: 20px;
 }
+/*End of Watch Section*/
 
 
+/*Behind the Scenes Section*/
 
-/*Behind the Scenes Section */
-
+/*Background image/container for the bts section*/
 .bts-section {
   display: flex;
   width: 100%;
@@ -311,6 +323,7 @@ letter-spacing: 0.3rem;
   background-size: 100% 100%;
 }
 
+/*Bts Section content*/
 .bts-text {
   display:flex;
   flex-direction: column;
@@ -336,9 +349,11 @@ letter-spacing: 0.3rem;
   font-size: 1.5rem;
   color: white
 }
+/*End of Behind the Scenes Section*/
 
 /*Quizzes Section*/
 
+/*Background image/container for the quizzes section*/
 .quizzes-section {
   display: flex;
   width: 100%;
@@ -348,6 +363,7 @@ letter-spacing: 0.3rem;
   background-size: 100% 100%;
 }
 
+/*Quizzes Section content*/
 .quizzes-text {
   display:flex;
   flex-direction: column;
@@ -355,10 +371,10 @@ letter-spacing: 0.3rem;
   padding-left: 150px;
   padding-right: 150px;
   margin: auto auto;
-  width: 65%;
-  height: 75%;
+  width: 100%;
+  height: 40%;
   text-align: center;
-  /*background-color: blue;*/
+  background-color: rgba(0,0,0,0.8);
 }
 
 .quiz-title {
@@ -367,6 +383,7 @@ letter-spacing: 0.3rem;
   font-size: 4rem;
   color: white
 }
+/*End of Quizzes Section*/
 
 /*Store Section*/
 .store {
@@ -386,6 +403,7 @@ letter-spacing: 0.3rem;
   margin-top: 20px;
 }
 
+/*cards box*/
 .cards--section {
   display: flex;
   width: 100%;
@@ -394,6 +412,7 @@ letter-spacing: 0.3rem;
   gap: 0.9rem;
 }
 
+/*The white part of the card*/
 .cards--section ul {
   display: flex;
   padding-top: 50px;
@@ -407,6 +426,8 @@ letter-spacing: 0.3rem;
   background-color: white;
   border-radius: 50px;
 }
+
+/*Card content*/
 .cards--section ul li {
   list-style-type: none;
   margin-right: 30px;
@@ -422,6 +443,7 @@ letter-spacing: 0.3rem;
   font-weight:lighter;
 }
 
+/*Content underneath the cards' box*/
 .shop--bottom {
   display: flex;
   width: 100%;
@@ -441,9 +463,11 @@ letter-spacing: 0.3rem;
   font-size: 1.7rem;
   cursor: pointer;
 }
+/*End of Store Section*/
 
 /*Footer*/
 
+/*Entire footer*/
 .footer {
   display: flex;
   width: 100%;
@@ -456,6 +480,7 @@ letter-spacing: 0.3rem;
   justify-content: center;
 }
 
+/*Box that contains all footer content*/
 .footer--content {
   display: flex;
   width: 90%;
@@ -524,6 +549,7 @@ my footer*/
   font-size: 1rem;
 }
 
+/*Copyright text and logos*/
 .bottom--text--footer {
   display: flex;
   width: 100%;
@@ -550,7 +576,7 @@ my footer*/
   height: 80%;
   margin-top: 2px;
 }
-
+/*End of Footer*/
 
 /*Screen reader only, based on example shown in class*/
 .sr-only {
